kube-credential-main/backend/kubernetes/issuance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuance-service
  labels:
    app: issuance-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: issuance-service
