kube-credential-main/backend/kubernetes/verification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verification-service
  labels:
    app: verification-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
    name: http
  selector:
    app: verification-service
