kube-credential-main/backend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-credential-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: api.kube-credential.com
    http:
      paths:
      - path: /issuance(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: issuance-service
            port:
              number: 80
      - path: /verification(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: verification-service
            port:
              number: 80
  tls:
  - hosts:
    - api.kube-credential.com
    secretName: kube-credential-tls
